--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "css-loader": "^4.2.1",
+    "firebase": "^7.12.0",
     "material-design-icons": "^3.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuefire": "^2.2.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
@@ -29,6 +31,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuefire": "^1.0.2",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
