--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "css-loader": "^4.2.1",
-    "firebase": "^7.12.0",
+    "firebase": "^7.18.0",
     "material-design-icons": "^3.0.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
+    "vue-firestore": "^0.3.30",
+    "vue-router": "^2.0.0",
     "vuefire": "^2.2.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
@@ -31,6 +32,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-firebase-deploy": "0.0.5",
     "vue-cli-plugin-vuefire": "^1.0.2",
     "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.11",
